--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "grunt-contrib-connect": "^0.9.0"
   }
 }
