--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "bower": "^1.3.12",
-    "grunt-contrib-connect": "^0.9.0"
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "connect-modrewrite": "^0.7.11"
   }
 }
